fixing bug with links on ios

--- a/src/client/css/puzzles/xyflyer.less
+++ b/src/client/css/puzzles/xyflyer.less
@@ -175,39 +175,9 @@ body {
                 }
             }    
         }
-            
-        button {
-            font-size: @h4size;
-            -moz-box-shadow:inset 0px 1px 0px 0px #f29c93;
-            -webkit-box-shadow:inset 0px 1px 0px 0px #f29c93;
-            box-shadow:inset 0px 1px 0px 0px #f29c93;
-            background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100) );
-            background:-moz-linear-gradient( center top, #fe1a00 5%, #ce0100 100% );
-            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100');
-            background-color:#fe1a00;
-            -moz-border-radius:6px;
-            -webkit-border-radius:6px;
-            border-radius:6px;
-            border:1px solid #d83526;
-            display:block;
-            color: @white;
-            font-family:arial;
-            font-size:15px;
-            font-weight:bold;
-            padding:6px 24px;
-            text-decoration:none;
-            text-shadow:1px 1px 0px #b23e35;
-            margin: auto;
-            &:hover {
-                background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00) );
-                background:-moz-linear-gradient( center top, #ce0100 5%, #fe1a00 100% );
-                filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce0100', endColorstr='#fe1a00');
-                background-color:#ce0100;
-            }
-            &:active {
-                position:relative;
-                top:1px;
-            }
+                    
+        .launch_button {
+            text-align: center;
         }
 
         .possible_fragments {
@@ -236,6 +206,40 @@ body {
                 background: url('/assets/images/puzzles/xyflyer/fragment_down_arrow.png') no-repeat top center;
                 cursor: pointer;
             }
+        }
+    }
+    
+    .button {
+        font-size: @h4size;
+        -moz-box-shadow:inset 0px 1px 0px 0px #f29c93;
+        -webkit-box-shadow:inset 0px 1px 0px 0px #f29c93;
+        box-shadow:inset 0px 1px 0px 0px #f29c93;
+        background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fe1a00), color-stop(1, #ce0100) );
+        background:-moz-linear-gradient( center top, #fe1a00 5%, #ce0100 100% );
+        filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fe1a00', endColorstr='#ce0100');
+        background-color:#fe1a00;
+        -moz-border-radius:6px;
+        -webkit-border-radius:6px;
+        border-radius:6px;
+        border:1px solid #d83526;
+        display:inline-block;
+        color: @white;
+        font-family:arial;
+        font-size:15px;
+        font-weight:bold;
+        padding:6px 24px;
+        text-decoration:none;
+        text-shadow:1px 1px 0px #b23e35;
+        margin: auto;
+        &:hover {
+            background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ce0100), color-stop(1, #fe1a00) );
+            background:-moz-linear-gradient( center top, #ce0100 5%, #fe1a00 100% );
+            filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ce0100', endColorstr='#fe1a00');
+            background-color:#ce0100;
+        }
+        &:active {
+            position:relative;
+            top:1px;
         }
     }
 
